namespaces/wordpress/pod.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
  replicas: 1
  template: # create pods; pod template
    metadata:
      labels:
        app: wordpress
    spec:
#     restartPolicy: Never
      containers:
      - name: wpdb
        image: mariadb
        volumeMounts:
        - name: wp-db
          mountPath: /var/lib/mysql
        ports:
        - containerPort: 3306
          name: wpdb
      - name: php
        image: wordpress:fpm-alpine
        command: ["php-fpm"]
        ports:
        - containerPort: 9000
          name: php
        volumeMounts:
        - name: wp-php
          mountPath: /var/php
      - name: wp-proxy
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-cm
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
          readOnly: true
        - name: wp-php
          mountPath: /var/php
          readOnly: true

      volumes:
      - name: wp-php
        hostPath:
          path: /mnt/k8s/wordpress
#        persistentVolumeClaim:
#          claimName: wp-php-claim
      - name: wp-db
        hostPath:
          path: /mnt/k8s/wordpress/dbdir
#        persistentVolumeClaim:
#          claimName: wp-db-claim
      - name: nginx-cm
        configMap:
          name: nginx-cm
