namespaces/wordpress/svc.yml
# https://kubernetes.io/docs/concepts/services-networking/connect-applications-service/#exposing-pods-to-the-cluster
apiVersion: v1
kind: Service
metadata:
  name: php
#  namespace: default
spec:
  ports:
  - port: 9000
  selector:
    app: wordpress
  clusterIP: None

# https://kubernetes.io/docs/tutorials/stateful-application/mysql-wordpress-persistent-volume/
---
apiVersion: v1
kind: Service
metadata:
  name: wpdb
  labels:
    app: wordpress
spec:
  ports:
    - port: 3306
  selector:
    app: wordpress
  clusterIP: None

---
apiVersion: v1
kind: Service
metadata:
  name: wp-proxy
  labels:
    app: wordpress
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: wordpress
