namespaces/wordpress/ing.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wordpress-admin
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basicauth-webide
    nginx.ingress.kubernetes.io/auth-realm: 'Wordpress admin area'
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: lisanne.lent.ink
    http: &httpa_rules
      paths:
      - path: /wp-admin/
        backend:
          serviceName: wp-proxy
          servicePort: 80
  - host: juflisanne.nl
    http: *httpa_rules
  tls:
  - hosts:
    - lisanne.lent.ink
    - juflisanne.nl
    secretName: main-tls

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wordpress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($request_method !~ ^(GET|HEAD|OPTIONS)$ ) {
        return 444;
      }
spec:
  rules:
  - host: lisanne.lent.ink
    http: &http_rules
      paths:
      - backend:
          serviceName: wp-proxy
          servicePort: 80
  - host: juflisanne.nl
    http: *http_rules
  tls:
  - hosts:
    - lisanne.lent.ink
    - juflisanne.nl
    secretName: main-tls
